--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -9,17 +9,20 @@ cmake_minimum_required(VERSION 3.4.1)
 # or SHARED, and provides the relative paths to its source code.
 # You can define multiple libraries, and CMake builds them for you.
 # Gradle automatically packages shared libraries with your APK.
-file(GLOB native_srcs "src/main/cpp/*.cpp")
 add_library( # Sets the name of the library.
         native-lib
-        atest
         # Sets the library as a shared library.
         SHARED
 
         # Provides a relative path to your source file(s).
         native-lib.cpp
-        atest.cpp)
+        )
 
+add_library(
+        at
+        SHARED
+        at.cpp
+)
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
 # default, you only need to specify the name of the public NDK library
@@ -39,7 +42,7 @@ find_library( # Sets the name of the path variable.
 
 target_link_libraries( # Specifies the target library.
         native-lib
-        atest
+        at
         dlib
         # Links the target library to the log library
         # included in the NDK.
