--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -47,3 +47,10 @@ target_link_libraries( # Specifies the target library.
         # Links the target library to the log library
         # included in the NDK.
         ${log-lib})
+
+target_link_libraries( # Specifies the target library.
+        at
+        dlib
+        # Links the target library to the log library
+        # included in the NDK.
+        ${log-lib})
