--- a/dlibmodule/src/main/AndroidManifest.xml
+++ b/dlibmodule/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="au.hao.and.dlibmodule" />
+    package="au.hao.and.dlibmodule" >
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+</manifest>
