--- a/dlibmodule/src/main/cpp/CMakeLists.txt
+++ b/dlibmodule/src/main/cpp/CMakeLists.txt
@@ -46,6 +46,7 @@ find_library( # Sets the name of the path variable.
 
 target_link_libraries( # Specifies the target library.
         mathutil
+        jnigraphics
         dlib
         # Links the target library to the log library
         # included in the NDK.
