--- a/dlibmodule/build.gradle
+++ b/dlibmodule/build.gradle
@@ -17,6 +17,7 @@ android {
 
         externalNativeBuild {
             cmake {
+                arguments "-DCMAKE_BUILD_TYPE=Release"
                 arguments "-DANDROID_STL=c++_shared"
                 cppFlags "-std=c++11 -frtti -fexceptions"
             }
